--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@
 
   --gray-color-100: rgba(241, 241, 243, 1);
   --gray-color-200: rgba(247, 247, 248, 1);
+  --gray-color-500: rgba(89, 89, 90, 1);
   --color-gray-600: rgba(76, 76, 77, 1);
 }
 
