--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
 
   --gray-color-100: rgba(241, 241, 243, 1);
   --gray-color-200: rgba(247, 247, 248, 1);
+  --gray-color-300: rgba(101, 101, 103, 1);
   --gray-color-500: rgba(89, 89, 90, 1);
   --color-gray-600: rgba(76, 76, 77, 1);
   --gray-color-800: rgba(38, 38, 38, 1);
@@ -18,4 +19,32 @@
 body {
   background-color: var(--gray-color-200);
   color: #262626;
+}
+
+.base-layout {
+  margin-top: 50px;
+  max-width: 1920px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (min-width: 1024px) {
+  .base-layout {
+    margin-top: 100px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .base-layout {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+@media (min-width: 1600px) {
+  .base-layout {
+    margin-top: 150px;
+  }
 }
